# empleado-estatal-bot-2

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  tools.py
.github/workflows/: python.yml
config/: config.sample.yml  config.yml
docs/: POST_STATES.md
infrastructure/: __init__.py  config.py  database.py  reddit.py  webserver.py
templates/: stats.html
tests/: conftest.py  test_domain_utils.py  test_integration_run.py  test_newspaper_processor.py
tests/data/: processed_text.md  raw_text.html  temp.md
threads/: __init__.py  base_thread.py  cleanup_thread.py  newspaper_fetcher.py  newspaper_processor.py  reddit_fetch.py  reddit_post.py
utils/: domain_utils.py  newspaper_processor.py
